--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button onclick="showTab('dice')" id="diceTab" class="active">Dice</button>
         <button onclick="showTab('coin')" id="coinTab">Coin</button>
         <button onclick="showTab('duck')" id="duckTab">Duck Race</button>
-        <button onclick="showTab('teams')" id="teamsTab">Team Randomizer</button>
+        <button onclick="showTab('teams')" id="teamsTab" class="action">Team Randomizer</button>
       </nav>
     </header>
     
