--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="hxRRlfs_F2gYfBw7mJ2ptx0-RRkUy6ezW6c9D8AMQgc" />
+
+  <!-- SEO meta tags -->
+  <meta name="keywords" content="dice roller, coin flip, duck race, team randomizer, games, online tools">
+  <meta name="description" content="A fun interactive website to roll dice, flip coins, race ducks, and randomize teams.">
+  <meta name="author" content="Foxseiz">
+
+  <!-- Open Graph / social sharing -->
+  <meta property="og:title" content="Foxseiz Roll Hub">
+  <meta property="og:description" content="Roll dice, flip coins, race ducks, and randomize teams all in one site!">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://username.github.io/roll-hub">
+  
   <title>Roll Hub</title>
   <link rel="stylesheet" href="css/style.css">
   </head>
